// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorItem renders  should be disabled 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Button))
        className="buttonBase"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
      >
        <RadioButtonUncheckedIcon
          className="authorLinkIcon"
          color="secondary"
        />
        Test user
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Typography))
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AuthorItem renders  should be linked 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Button))
        className="buttonBase"
        disabled={true}
        fullWidth={true}
      >
        <LinkIcon
          className="authorLinkIcon"
        />
        Test user
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Typography))
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AuthorItem renders  should be linked and disabled 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Button))
        className="buttonBase"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
      >
        <RadioButtonUncheckedIcon
          className="authorLinkIcon"
          color="secondary"
        />
        Test user
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Typography))
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AuthorItem renders  should be selected 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Button))
        className="buttonBase"
        disabled={false}
        fullWidth={true}
      >
        <RadioButtonCheckedIcon
          className="authorLinkIcon"
          color="primary"
        />
        Test user
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Typography))
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AuthorItem renders  should be selected and disabled 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Button))
        className="buttonBase"
        disabled={true}
        fullWidth={true}
      >
        <RadioButtonCheckedIcon
          className="authorLinkIcon"
          color="primary"
        />
        Test user
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Typography))
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AuthorItem renders  should be unselected and able to select author 1`] = `
<WithStyles(ForwardRef(Grid))
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <WithStyles(ForwardRef(Grid))
    container={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Button))
        className="buttonBase"
        disabled={false}
        fullWidth={true}
        onClick={[Function]}
      >
        <RadioButtonUncheckedIcon
          className="authorLinkIcon"
          color="secondary"
        />
        Test user
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(ForwardRef(Typography))
        className="authorOrder"
        variant="caption"
      >
        First  listed author
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`AuthorItem renders  should have a proper style generator 1`] = `
Object {
  "authorLinkIcon": Object {
    "marginRight": 10,
  },
  "authorOrder": Object {
    "marginBottom": 20,
    "marginLeft": 60,
  },
  "buttonBase": Object {
    "justifyContent": "flex-start",
  },
}
`;
